@@ -667,8 +667,8 @@ ConfigView.label.userSuperSeeding=Use Super Seeding
 PeersView.uniquepiece=Piece (Super-Seed Mode)
 PeersView.uniquepiece.none=None
 PeersView.timetosend=Time to resend Piece (Super-Seed Mode)
-ConfigView.section.style.addurlsilently=Open URL silently (without dialog)
-ConfigView.section.style.addurlsilently.tooltip=Warning: the main window will not made visible again if activated!\nIf you loose the tray icon, you should deactivate this option.
+ConfigView.section.style.addurlsilently=Open URLs silently (without dialog prompt)
+ConfigView.section.style.addurlsilently.tooltip=Automatically download .torrent URLs without opening prompt dialog box.
 ConfigView.section.file.decoder.prompt=Always prompt when encoding choice available
 ConfigView.section.file.decoder.prompt.tooltip=Always show dialog when encoding choice is available
 MyTorrentsView.menu.moveTop=&Top
@@ -1321,6 +1321,8 @@ MyTorrentsView.seed_to_peer_ratio=Seed2PeerRatio
 MyTorrentsView.seed_to_peer_ratio.info=Total swarm seeds to peers ratio
 PeersView.connected_time=Connected Time
 PeersView.connected_time.info=Total time connected with peer
+ConfigView.section.interface.display.add_torrents_silently=Add torrents silently
+ConfigView.section.interface.display.add_torrents_silently.tooltip=Add torrent downloads without activating main Azureus window.
 
 
 #PLEASE LEAVE ME AT VERY BOTTOM!
